<resources>
    <string name="app_name">Weather App</string>
    <string name="search">Search</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="description">Description</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="settings">Settings</string>
    <string name="hint_city_name">City name...</string>
    <string name="loading">Loading...</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="weather_info">Weather info</string>
</resources>