<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:src="@drawable/clearsky"
        app:layout_constraintBottom_toTopOf="@id/main_text"
        app:layout_constraintEnd_toStartOf="@id/main_image2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_image2"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:src="@drawable/downpour"
        app:layout_constraintBottom_toTopOf="@id/main_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/et_city_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_image" />

    <EditText
        android:id="@+id/et_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedinput"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="5dp"
        android:hint="@string/hint_city_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/button_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_text" />

    <Button
        android:id="@+id/button_search"
        style="@style/button"
        android:layout_marginTop="15dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@id/button_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_city_name" />

    <Button
        android:id="@+id/button_settings"
        style="@style/button"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_search" />

</androidx.constraintlayout.widget.ConstraintLayout>